adjusted h1 line height and overflow issues on mobile

--- a/className.css
+++ b/className.css
@@ -178,7 +178,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 25px 0;
+  margin: 25px 0 0;
 }
 .black-btn {
   width: 150px;
